# jerryrig

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample_python.py  shared_config.yaml  test_repository_analysis.json  test_script.py
agents/: jerryrig_migrator.yaml
complete_test/analysis/: repository_analysis.json
sam_project/: config.yaml
sam_project/agents/: code_analyzer.py  code_migrator.py  repository_chunker.py  repository_input.py  repository_orchestrator.py  result_aggregator.py
src/jerryrig/: __init__.py  cli.py
src/jerryrig/agents/: __init__.py  chunking_agents.py  event_mesh_agent.py  sam_agent.py  solace_agent.py
src/jerryrig/config/: default.yaml  sam_config.yaml
src/jerryrig/core/: __init__.py  analyzer.py  fast_migrator.py  mesh_client.py  mesh_initializer.py  mesh_launcher.py  migrator.py  repository_agent.py  scraper.py
src/jerryrig/monitoring/: __init__.py  progress_tracker.py
src/jerryrig/utils/: __init__.py  logger.py
test_output/: test_script.js
test_python_repo/analysis/: gitingest_cpython.txt
test_scrape_output/: gitingest_Hello-World.txt
